--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 header {
     background-color: #383D58;
-    color: white;
+    color: rgb(255, 255, 255);
     }
     .cabecalho {
         background-color: #383D58;
